--- a/model.ipynb
+++ b/model.ipynb
@@ -6,10 +6,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import torch\n",
     "import torchvision\n",
+    "from torch import nn\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "from images import show_grid\n",
+    "from model import Model\n",
+    "\n",
+    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')"
    ]
   },
   {
@@ -31,18 +44,123 @@
    "outputs": [],
    "source": [
     "# Extract a category of images\n",
-    "real_images = cifar10.data[ [i for i, t in enumerate(cifar10.targets) if t == cifar10.classes.index('automobile')] ]\n",
+    "real_images = cifar10.data[ [i for i, t in enumerate(cifar10.targets) if t == cifar10.classes.index('automobile')] ] / 256\n",
     "\n",
-    "fig, axes = plt.subplots(5, 5, figsize=(10, 10))\n",
-    "axes = axes.flatten()\n",
+    "# Use floats\n",
+    "real_images = np.array(real_images)\n",
     "\n",
-    "for i in range(25):\n",
-    "    ax = axes[i]\n",
-    "    ax.imshow(real_images[i, :, :, :])\n",
-    "    ax.axis('off')\n",
+    "# Put the channel at the end\n",
+    "real_images = np.swapaxes(real_images, 1, 3)\n",
     "\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "show_grid(real_images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# As defined in https://theaisummer.com/diffusion-models/#forward-diffusion\n",
+    "def add_noise(img, beta):\n",
+    "    return math.sqrt(1 - beta) * img + np.random.normal(scale=math.sqrt(beta), size=img.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add noise to an image\n",
+    "noisy = [real_images[0]]\n",
+    "\n",
+    "for t in range(25):\n",
+    "    noisy.append(add_noise(noisy[-1], 0.005 + t/24 * 0.05))\n",
+    "\n",
+    "show_grid(np.array(noisy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate noise for all the images\n",
+    "pairs = []\n",
+    "\n",
+    "for i in tqdm(range(len(real_images))):\n",
+    "    im = real_images[i]\n",
+    "\n",
+    "    for t in range(24):\n",
+    "        noised = add_noise(im, 0.005 + t/24 * 0.05)\n",
+    "        pairs.append((im, noised))\n",
+    "        im = noised\n",
+    "    \n",
+    "    # Todel\n",
+    "    if i > 10:\n",
+    "        break\n",
+    "\n",
+    "pairs = np.array(pairs, dtype=np.float32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Model().to(device)\n",
+    "\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
+    "loss_fn = nn.MSELoss()\n",
+    "\n",
+    "# TODO batch size\n",
+    "data_loader = torch.utils.data.DataLoader(pairs, batch_size=128, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.train()\n",
+    "\n",
+    "loss_hist = []\n",
+    "\n",
+    "for epoch in range(10):\n",
+    "    \n",
+    "    for batch, data in enumerate(data_loader):\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        noised = data[:, 1, :, :].to(device)\n",
+    "        target = data[:, 0, :, :].to(device)\n",
+    "\n",
+    "        pred = model(noised)\n",
+    "\n",
+    "        loss = loss_fn(pred, target)\n",
+    "        loss_hist.append(loss.item())\n",
+    "\n",
+    "        loss.backward()\n",
+    "        optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(loss_hist[10:])"
    ]
   }
  ],
