--- a/model.ipynb
+++ b/model.ipynb
@@ -124,7 +124,7 @@
     "loss_fn = nn.MSELoss()\n",
     "\n",
     "# TODO batch size\n",
-    "data_loader = torch.utils.data.DataLoader(pairs, batch_size=128, shuffle=True)"
+    "data_loader = torch.utils.data.DataLoader(pairs, batch_size=4096, shuffle=True)"
    ]
   },
   {
@@ -162,6 +162,20 @@
    "source": [
     "plt.plot(loss_hist[10:])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
