--- a/model.ipynb
+++ b/model.ipynb
@@ -18,11 +18,22 @@
     "import numpy as np\n",
     "\n",
     "import math\n",
+    "import sys\n",
+    "\n",
+    "# Mount Google Drive if executed on Google Colab\n",
+    "try:\n",
+    "    from google.colab import drive\n",
+    "\n",
+    "    drive.mount('/content/gdrive/')\n",
+    "    sys.path.append('/content/gdrive/MyDrive/GenAI')\n",
+    "except:\n",
+    "    print(\"Not running on Google Colab\")\n",
     "\n",
     "from images import show_grid\n",
     "from model import Model\n",
     "\n",
-    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')"
+    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
+    "print(\"Device:\", device)"
    ]
   },
   {
@@ -91,18 +102,13 @@
     "pairs = []\n",
     "\n",
     "for i in tqdm(range(len(real_images))):\n",
+    "\n",
     "    im = real_images[i]\n",
     "\n",
     "    for t in range(24):\n",
     "        noised = add_noise(im, 0.005 + t/24 * 0.05)\n",
-    "        pairs.append((im, noised))\n",
-    "        im = noised\n",
-    "    \n",
-    "    # Todel\n",
-    "    if i > 10:\n",
-    "        break\n",
-    "\n",
-    "pairs = np.array(pairs, dtype=np.float32)"
+    "        pairs.append((np.array(im, dtype=np.float32), np.array(noised, dtype=np.float32), np.array(t / 25, dtype=np.float32)))\n",
+    "        im = noised"
    ]
   },
   {
@@ -120,11 +126,10 @@
    "source": [
     "model = Model().to(device)\n",
     "\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
-    "loss_fn = nn.MSELoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "loss_fn = nn.L1Loss()\n",
     "\n",
-    "# TODO batch size\n",
-    "data_loader = torch.utils.data.DataLoader(pairs, batch_size=4096, shuffle=True)"
+    "data_loader = torch.utils.data.DataLoader(pairs, batch_size=1024, shuffle=True)"
    ]
   },
   {
@@ -137,15 +142,16 @@
     "\n",
     "loss_hist = []\n",
     "\n",
-    "for epoch in range(10):\n",
+    "for epoch in tqdm(range(5)):\n",
     "    \n",
-    "    for batch, data in enumerate(data_loader):\n",
+    "    for batch, (target, noised, time) in enumerate(data_loader):\n",
     "        optimizer.zero_grad()\n",
     "\n",
-    "        noised = data[:, 1, :, :].to(device)\n",
-    "        target = data[:, 0, :, :].to(device)\n",
+    "        target = target.to(device)\n",
+    "        noised = noised.to(device)\n",
+    "        time = time.to(device)\n",
     "\n",
-    "        pred = model(noised)\n",
+    "        pred = model(noised, time)\n",
     "\n",
     "        loss = loss_fn(pred, target)\n",
     "        loss_hist.append(loss.item())\n",
@@ -160,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(loss_hist[10:])"
+    "plt.plot(loss_hist[5:])"
    ]
   },
   {
@@ -175,7 +181,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def generate_image():\n",
+    "    noisy = [np.zeros((3, 32, 32))]\n",
+    "    for t in range(25):\n",
+    "        noisy.append(add_noise(noisy[-1], 0.005 + t/24 * 0.05))\n",
+    "    \n",
+    "    denoised = [torch.Tensor([noisy[-1]]).to(device)]\n",
+    "\n",
+    "    for i in range(25):\n",
+    "        denoised.append(model(denoised[-1], torch.Tensor([(24-i) / 25]).to(device)))\n",
+    "    \n",
+    "    show_grid(np.array([d.detach().cpu().numpy().squeeze(0) for d in denoised]))\n",
+    "\n",
+    "generate_image()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pair = pairs[0]\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(6, 6))\n",
+    "\n",
+    "axes[0].imshow(np.swapaxes(pair[0], 0, 2))\n",
+    "axes[0].axis('off')\n",
+    "\n",
+    "axes[1].imshow(np.swapaxes(pair[1], 0, 2))\n",
+    "axes[1].axis('off')\n",
+    "\n",
+    "pred = model(torch.Tensor(pair[1]).to(device).unsqueeze(0), torch.Tensor(pair[2]).to(device).unsqueeze(0)).squeeze()\n",
+    "axes[2].imshow(np.swapaxes(pred.detach().cpu().numpy(), 0, 2))\n",
+    "axes[2].axis('off')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
