--- a/model.ipynb
+++ b/model.ipynb
@@ -58,7 +58,7 @@
     "real_images = cifar10.data[ [i for i, t in enumerate(cifar10.targets) if t == cifar10.classes.index('automobile')] ] / 256\n",
     "\n",
     "# Use floats\n",
-    "real_images = np.array(real_images)\n",
+    "real_images = np.array(real_images, dtype=np.float32)\n",
     "\n",
     "# Put the channel at the end\n",
     "real_images = np.swapaxes(real_images, 1, 3)\n",
@@ -103,7 +103,7 @@
     "\n",
     "for i in tqdm(range(len(real_images))):\n",
     "\n",
-    "    im = real_images[i]\n",
+    "    im = real_images[i] - 0.5\n",
     "\n",
     "    for t in range(24):\n",
     "        noised = add_noise(im, 0.005 + t/24 * 0.05)\n",
@@ -142,7 +142,7 @@
     "\n",
     "loss_hist = []\n",
     "\n",
-    "for epoch in tqdm(range(5)):\n",
+    "for epoch in tqdm(range(20)):\n",
     "    \n",
     "    for batch, (target, noised, time) in enumerate(data_loader):\n",
     "        optimizer.zero_grad()\n",
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(loss_hist[5:])"
+    "plt.plot(loss_hist)"
    ]
   },
   {
@@ -207,10 +207,10 @@
     "\n",
     "fig, axes = plt.subplots(1, 3, figsize=(6, 6))\n",
     "\n",
-    "axes[0].imshow(np.swapaxes(pair[0], 0, 2))\n",
+    "axes[0].imshow(np.swapaxes(pair[0], 0, 2) + 0.5)\n",
     "axes[0].axis('off')\n",
     "\n",
-    "axes[1].imshow(np.swapaxes(pair[1], 0, 2))\n",
+    "axes[1].imshow(np.swapaxes(pair[1], 0, 2) + 0.5)\n",
     "axes[1].axis('off')\n",
     "\n",
     "pred = model(torch.Tensor(pair[1]).to(device).unsqueeze(0), torch.Tensor(pair[2]).to(device).unsqueeze(0)).squeeze()\n",
