--- a/model.ipynb
+++ b/model.ipynb
@@ -42,6 +42,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "NB_STEPS = 50 - 1\n",
+    "NB_EPOCHS = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download the dataset\n",
     "cifar10 = torchvision.datasets.CIFAR10(root='./data', train=True, download=True)\n",
     "\n",
@@ -63,7 +73,7 @@
     "# Put the channel at the end\n",
     "real_images = np.swapaxes(real_images, 1, 3)\n",
     "\n",
-    "show_grid(real_images)"
+    "show_grid(real_images[:25])"
    ]
   },
   {
@@ -72,9 +82,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# As defined in https://theaisummer.com/diffusion-models/#forward-diffusion\n",
-    "def add_noise(img, beta):\n",
-    "    return math.sqrt(1 - beta) * img + np.random.normal(scale=math.sqrt(beta), size=img.shape)"
+    "def get_beta(step):\n",
+    "    return 0.0001 + (step / NB_STEPS) * 0.02\n",
+    "\n",
+    "# Adds one or several times noise to an image\n",
+    "def add_noise(img, first_step, last_step = -1):\n",
+    "    if last_step == -1:\n",
+    "        last_step = first_step + 1\n",
+    "\n",
+    "    alpha = 1\n",
+    "    for k in range(first_step, last_step):\n",
+    "        alpha *= (1 - get_beta(k))\n",
+    "    \n",
+    "    return math.sqrt(alpha) * img + np.random.normal(scale=math.sqrt(1 - alpha), size=img.shape)"
    ]
   },
   {
@@ -83,13 +103,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add noise to an image\n",
+    "# Add noise to an image progressively\n",
     "noisy = [real_images[0]]\n",
     "\n",
-    "for t in range(25):\n",
-    "    noisy.append(add_noise(noisy[-1], 0.005 + t/24 * 0.05))\n",
+    "for k in range(NB_STEPS):\n",
+    "    noisy.append(add_noise(noisy[-1], k))\n",
     "\n",
-    "show_grid(np.array(noisy))"
+    "show_grid(np.array(noisy))\n",
+    "\n",
+    "del noisy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add noise from the beginning each time\n",
+    "noisy = [real_images[0]]\n",
+    "\n",
+    "for k in range(NB_STEPS):\n",
+    "    noisy.append(add_noise(noisy[0], 0, k+1))\n",
+    "\n",
+    "show_grid(np.array(noisy))\n",
+    "\n",
+    "del noisy"
    ]
   },
   {
@@ -102,13 +141,12 @@
     "pairs = []\n",
     "\n",
     "for i in tqdm(range(len(real_images))):\n",
-    "\n",
     "    im = real_images[i] - 0.5\n",
     "\n",
-    "    for t in range(24):\n",
-    "        noised = add_noise(im, 0.005 + t/24 * 0.05)\n",
-    "        pairs.append((np.array(im, dtype=np.float32), np.array(noised, dtype=np.float32), np.array(t / 25, dtype=np.float32)))\n",
-    "        im = noised"
+    "    for k in range(NB_STEPS):\n",
+    "        noised_k = add_noise(im, 0, k)\n",
+    "        next_noised = add_noise(noised_k, k, k+1)\n",
+    "        pairs.append((np.array(noised_k, dtype=np.float32), np.array(next_noised, dtype=np.float32), np.array(k / NB_STEPS, dtype=np.float32)))"
    ]
   },
   {
@@ -142,7 +180,7 @@
     "\n",
     "loss_hist = []\n",
     "\n",
-    "for epoch in tqdm(range(30)):\n",
+    "for epoch in tqdm(range(NB_EPOCHS)):\n",
     "    \n",
     "    for batch, (target, noised, time) in enumerate(data_loader):\n",
     "        optimizer.zero_grad()\n",
@@ -183,14 +221,13 @@
    "outputs": [],
    "source": [
     "def generate_image():\n",
-    "    noisy = [np.zeros((3, 32, 32))]\n",
-    "    for t in range(25):\n",
-    "        noisy.append(add_noise(noisy[-1], 0.005 + t/24 * 0.05))\n",
+    "    noisy = np.random.normal(size=(3, 32, 32))\n",
     "    \n",
-    "    denoised = [torch.Tensor([noisy[-1]]).to(device)]\n",
+    "    denoised = [torch.Tensor([noisy]).to(device)]\n",
     "\n",
-    "    for i in range(25):\n",
-    "        denoised.append(model(denoised[-1], torch.Tensor([(24-i) / 25]).to(device)))\n",
+    "    for k in range(NB_STEPS):\n",
+    "        t = (NB_STEPS - k - 1) / NB_STEPS\n",
+    "        denoised.append(model(denoised[-1], torch.Tensor([t]).to(device)))\n",
     "    \n",
     "    show_grid(np.array([d.detach().cpu().numpy().squeeze(0) for d in denoised]))\n",
     "\n",
