--- a/model.ipynb
+++ b/model.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "# Extract a category of images\n",
-    "real_images = cifar10.data[ [i for i, t in enumerate(cifar10.targets) if t == cifar10.classes.index('automobile')] ] / 256\n",
+    "real_images = cifar10.data[ [i for i, t in enumerate(cifar10.targets) if t == cifar10.classes.index('automobile')] ] / (255 / 2) - 1\n",
     "\n",
     "# Use floats\n",
     "real_images = np.array(real_images, dtype=np.float32)\n",
@@ -124,7 +124,7 @@
     "noisy = [real_images[0]]\n",
     "\n",
     "for k in range(NB_STEPS):\n",
-    "    noisy.append(add_noise(noisy[0], 0, k+1))\n",
+    "    noisy.append(add_noise(noisy[0], 0, k + 1))\n",
     "\n",
     "show_grid(np.array(noisy))\n",
     "\n",
@@ -141,12 +141,14 @@
     "pairs = []\n",
     "\n",
     "for i in tqdm(range(len(real_images))):\n",
-    "    im = real_images[i] - 0.5\n",
+    "    im = real_images[i]\n",
     "\n",
     "    for k in range(NB_STEPS):\n",
     "        noised_k = add_noise(im, 0, k)\n",
     "        next_noised = add_noise(noised_k, k, k+1)\n",
-    "        pairs.append((np.array(noised_k, dtype=np.float32), np.array(next_noised, dtype=np.float32), np.array(k / NB_STEPS, dtype=np.float32)))"
+    "        pairs.append((np.array(noised_k, dtype=np.float32), np.array(next_noised, dtype=np.float32), np.array(k / NB_STEPS, dtype=np.float32)))\n",
+    "        break\n",
+    "    break"
    ]
   },
   {
@@ -240,22 +242,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pair = pairs[0]\n",
+    "im1, im2, t = pairs[0]\n",
     "\n",
-    "fig, axes = plt.subplots(1, 3, figsize=(6, 6))\n",
+    "pred = model(torch.Tensor(im2).to(device).unsqueeze(0), torch.Tensor(t).to(device).unsqueeze(0)).squeeze()\n",
+    "pred = pred.detach().cpu().numpy()\n",
     "\n",
-    "axes[0].imshow(np.swapaxes(pair[0], 0, 2) + 0.5)\n",
-    "axes[0].axis('off')\n",
-    "\n",
-    "axes[1].imshow(np.swapaxes(pair[1], 0, 2) + 0.5)\n",
-    "axes[1].axis('off')\n",
-    "\n",
-    "pred = model(torch.Tensor(pair[1]).to(device).unsqueeze(0), torch.Tensor(pair[2]).to(device).unsqueeze(0)).squeeze()\n",
-    "axes[2].imshow(np.swapaxes(pred.detach().cpu().numpy(), 0, 2))\n",
-    "axes[2].axis('off')\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "show_grid(np.array([im1, im2, pred]))"
    ]
   }
  ],
