--- a/model.ipynb
+++ b/model.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NB_STEPS = 50 - 1\n",
+    "NB_STEPS = 100 - 1\n",
     "NB_EPOCHS = 10"
    ]
   },
@@ -83,7 +83,8 @@
    "outputs": [],
    "source": [
     "def get_beta(step):\n",
-    "    return 0.0001 + (step / NB_STEPS) * 0.02\n",
+    "    #return 0.0001 + (step / NB_STEPS) * 0.02\n",
+    "    return 0.0001 + (step / NB_STEPS) * 0.15\n",
     "\n",
     "# Adds one or several times noise to an image\n",
     "def add_noise(img, first_step, last_step = -1):\n",
