Change learning rate

--- a/model.ipynb
+++ b/model.ipynb
@@ -43,7 +43,8 @@
    "outputs": [],
    "source": [
     "NB_STEPS = 100 - 1\n",
-    "NB_EPOCHS = 10"
+    "NB_EPOCHS = 10\n",
+    "LEARNING_RATE = 1e-4"
    ]
   },
   {
@@ -167,7 +168,7 @@
    "source": [
     "model = Model().to(device)\n",
     "\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
     "loss_fn = nn.L1Loss()\n",
     "\n",
     "data_loader = torch.utils.data.DataLoader(pairs, batch_size=1024, shuffle=True)"
