Plot the error of the identity model

--- a/model.ipynb
+++ b/model.ipynb
@@ -148,9 +148,7 @@
     "    for k in range(NB_STEPS):\n",
     "        noised_k = add_noise(im, 0, k)\n",
     "        next_noised = add_noise(noised_k, k, k+1)\n",
-    "        pairs.append((np.array(noised_k, dtype=np.float32), np.array(next_noised, dtype=np.float32), np.array(k / NB_STEPS, dtype=np.float32)))\n",
-    "        break\n",
-    "    break"
+    "        pairs.append((np.array(noised_k, dtype=np.float32), np.array(next_noised, dtype=np.float32), np.array(k / NB_STEPS, dtype=np.float32)))"
    ]
   },
   {
@@ -208,7 +206,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(loss_hist)"
+    "plt.figure()\n",
+    "\n",
+    "plt.plot(loss_hist, label=\"Train loss\")\n",
+    "\n",
+    "plt.plot(0.212 * np.ones(len(loss_hist)), color='orange', label=\"Random predictions\")\n",
+    "plt.plot(0.202 * np.ones(len(loss_hist)), color='orange')\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
