--- a/model.ipynb
+++ b/model.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NB_STEPS = 100 - 1\n",
+    "NB_STEPS = 1000 - 1\n",
     "NB_EPOCHS = 10\n",
     "LEARNING_RATE = 1e-4"
    ]
@@ -84,8 +84,7 @@
    "outputs": [],
    "source": [
     "def get_beta(step):\n",
-    "    #return 0.0001 + (step / NB_STEPS) * 0.02\n",
-    "    return 0.0001 + (step / NB_STEPS) * 0.15\n",
+    "    return 0.0001 + (step / NB_STEPS) * 0.02\n",
     "\n",
     "# Adds one or several times noise to an image\n",
     "def add_noise(img, first_step, last_step = -1):\n",
@@ -111,7 +110,7 @@
     "for k in range(NB_STEPS):\n",
     "    noisy.append(add_noise(noisy[-1], k))\n",
     "\n",
-    "show_grid(np.array(noisy))\n",
+    "show_grid(np.array(noisy[::20]))\n",
     "\n",
     "del noisy"
    ]
@@ -128,7 +127,7 @@
     "for k in range(NB_STEPS):\n",
     "    noisy.append(add_noise(noisy[0], 0, k + 1))\n",
     "\n",
-    "show_grid(np.array(noisy))\n",
+    "show_grid(np.array(noisy[::20]))\n",
     "\n",
     "del noisy"
    ]
