--- a/model.ipynb
+++ b/model.ipynb
@@ -44,7 +44,8 @@
    "source": [
     "NB_STEPS = 1000 - 1\n",
     "NB_EPOCHS = 10\n",
-    "LEARNING_RATE = 1e-4"
+    "LEARNING_RATE = 1e-4\n",
+    "BATCH_SIZE = 512"
    ]
   },
   {
@@ -94,7 +95,7 @@
     "    alpha = 1\n",
     "    for k in range(first_step, last_step):\n",
     "        alpha *= (1 - get_beta(k))\n",
-    "    \n",
+    "\n",
     "    return math.sqrt(alpha) * img + np.random.normal(scale=math.sqrt(1 - alpha), size=img.shape)"
    ]
   },
@@ -133,24 +134,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate noise for all the images\n",
-    "pairs = []\n",
-    "\n",
-    "for i in tqdm(range(len(real_images))):\n",
-    "    im = real_images[i]\n",
-    "\n",
-    "    for k in range(NB_STEPS):\n",
-    "        noised_k = add_noise(im, 0, k)\n",
-    "        next_noised = add_noise(noised_k, k, k+1)\n",
-    "        pairs.append((np.array(noised_k, dtype=np.float32), np.array(next_noised, dtype=np.float32), np.array(k / NB_STEPS, dtype=np.float32)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -166,9 +149,9 @@
     "model = Model().to(device)\n",
     "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
-    "loss_fn = nn.L1Loss()\n",
+    "loss_fn = nn.MSELoss()\n",
     "\n",
-    "data_loader = torch.utils.data.DataLoader(pairs, batch_size=1024, shuffle=True)"
+    "data_loader = torch.utils.data.DataLoader(real_images, batch_size=BATCH_SIZE, shuffle=True)"
    ]
   },
   {
@@ -183,20 +166,35 @@
     "\n",
     "for epoch in tqdm(range(NB_EPOCHS)):\n",
     "    \n",
-    "    for batch, (target, noised, time) in enumerate(data_loader):\n",
+    "    for batch, images in enumerate(data_loader):\n",
+    "        images = images.to(device)\n",
+    "\n",
+    "        # Generate noisy images\n",
+    "        err = torch.normal(mean=torch.zeros(images.shape), std=torch.ones(images.shape)).to(device)\n",
+    "\n",
+    "        steps = torch.randint(0, NB_STEPS, size=(len(images), 1, 1, 1)).to(device)\n",
+    "\n",
+    "        alphas = torch.ones(steps.shape)\n",
+    "        for k in range(NB_STEPS):\n",
+    "            alphas = (steps > 0) * alphas * (1 - get_beta(k)) + (steps <= 0) * alphas\n",
+    "        alphas = alphas.to(device).repeat(1, *images.shape[1:])\n",
+    "\n",
+    "        noisy_images = torch.sqrt(alphas) * images + torch.sqrt(1 - alphas) * err\n",
+    "\n",
+    "        times = steps.squeeze(1).squeeze(1).squeeze(1) / NB_STEPS\n",
+    "\n",
+    "        # Train the model on them\n",
     "        optimizer.zero_grad()\n",
     "\n",
-    "        target = target.to(device)\n",
-    "        noised = noised.to(device)\n",
-    "        time = time.to(device)\n",
+    "        pred_err = model(noisy_images, times)\n",
     "\n",
-    "        pred = model(noised, time)\n",
-    "\n",
-    "        loss = loss_fn(pred, target)\n",
+    "        loss = loss_fn(pred_err, err)\n",
     "        loss_hist.append(loss.item())\n",
     "\n",
     "        loss.backward()\n",
-    "        optimizer.step()"
+    "        optimizer.step()\n",
+    "\n",
+    "        del images, err, steps, alphas, noisy_images, times"
    ]
   },
   {
@@ -237,6 +235,36 @@
     "    for k in range(NB_STEPS):\n",
     "        t = (NB_STEPS - k - 1) / NB_STEPS\n",
     "        denoised.append(model(denoised[-1], torch.Tensor([t]).to(device)))\n",
+    "    \n",
+    "    show_grid(np.array([d.detach().cpu().numpy().squeeze(0) for d in denoised]))\n",
+    "\n",
+    "generate_image()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_image():\n",
+    "    noisy = np.random.normal(size=(3, 32, 32))\n",
+    "    \n",
+    "    denoised = [torch.Tensor([noisy]).to(device)]\n",
+    "\n",
+    "    for k in range(NB_STEPS-1, -1, -1):\n",
+    "        t = k / NB_STEPS\n",
+    "        pred = model(denoised[-1], torch.Tensor([t]).to(device))\n",
+    "\n",
+    "        alpha = 1\n",
+    "        for i in range(k+1):\n",
+    "            alpha *= (1 - get_beta(i))\n",
+    "\n",
+    "        denoised.append(\n",
+    "            (denoised[-1] - get_beta(k) / math.sqrt(1 - alpha) * pred) / math.sqrt(1 - get_beta(k)) +\n",
+    "            math.sqrt(get_beta(k)) * torch.Tensor(np.random.normal(size=(3, 32, 32))).to(device)\n",
+    "        )\n",
+    "        \n",
     "    \n",
     "    show_grid(np.array([d.detach().cpu().numpy().squeeze(0) for d in denoised]))\n",
     "\n",
