--- a/model.ipynb
+++ b/model.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "model.train()\n",
     "\n",
-    "loss_hist = []\n",
+    "loss_hist, diff_loss_hist = [], []\n",
     "\n",
     "for epoch in tqdm(range(NB_EPOCHS)):\n",
     "    \n",
@@ -196,6 +196,13 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
+    "        # Compute the \n",
+    "        with torch.no_grad():\n",
+    "            loss_0 = loss_fn(torch.zeros(err.shape), err.cpu())\n",
+    "\n",
+    "            # The value should progressively become negative\n",
+    "            diff_loss_hist.append(loss.item() - loss_0.item())\n",
+    "\n",
     "        del images, err, steps, alphas, noisy_images, times"
    ]
   },
@@ -206,12 +213,18 @@
    "outputs": [],
    "source": [
     "plt.figure()\n",
-    "\n",
+    "plt.plot(diff_loss_hist)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
     "plt.plot(loss_hist, label=\"Train loss\")\n",
-    "\n",
-    "plt.plot(0.212 * np.ones(len(loss_hist)), color='orange', label=\"Random predictions\")\n",
-    "plt.plot(0.202 * np.ones(len(loss_hist)), color='orange')\n",
-    "\n",
     "plt.legend()\n",
     "plt.show()"
    ]
