--- a/model.ipynb
+++ b/model.ipynb
@@ -243,61 +243,31 @@
    "outputs": [],
    "source": [
     "def generate_image():\n",
+    "    # Avoids memory problems. TODO: improve\n",
+    "    model_cpu = model.cpu()\n",
+    "    model_cpu.eval()\n",
+    "\n",
     "    noisy = np.random.normal(size=(3, 32, 32))\n",
-    "    \n",
-    "    denoised = [torch.Tensor([noisy]).to(device)]\n",
     "\n",
-    "    for k in range(NB_STEPS):\n",
-    "        t = (NB_STEPS - k - 1) / NB_STEPS\n",
-    "        denoised.append(model(denoised[-1], torch.Tensor([t]).to(device)))\n",
-    "    \n",
-    "    show_grid(np.array([d.detach().cpu().numpy().squeeze(0) for d in denoised]))\n",
+    "    denoised = [torch.Tensor([noisy])]\n",
     "\n",
-    "generate_image()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_image():\n",
-    "    noisy = np.random.normal(size=(3, 32, 32))\n",
-    "    \n",
-    "    denoised = [torch.Tensor([noisy]).to(device)]\n",
-    "\n",
-    "    for k in range(NB_STEPS-1, -1, -1):\n",
+    "    for k in tqdm(range(NB_STEPS-1, -1, -1)):\n",
     "        t = k / NB_STEPS\n",
-    "        pred = model(denoised[-1], torch.Tensor([t]).to(device))\n",
+    "        im = denoised[-1]\n",
+    "        pred = model_cpu(im, torch.Tensor([t]))\n",
     "\n",
     "        alpha = 1\n",
     "        for i in range(k+1):\n",
     "            alpha *= (1 - get_beta(i))\n",
     "\n",
-    "        denoised.append(\n",
-    "            (denoised[-1] - get_beta(k) / math.sqrt(1 - alpha) * pred) / math.sqrt(1 - get_beta(k)) +\n",
-    "            math.sqrt(get_beta(k)) * torch.Tensor(np.random.normal(size=(3, 32, 32))).to(device)\n",
-    "        )\n",
-    "        \n",
-    "    \n",
-    "    show_grid(np.array([d.detach().cpu().numpy().squeeze(0) for d in denoised]))\n",
+    "        denoised.append((\n",
+    "            (im - get_beta(k) / math.sqrt(1 - alpha) * pred) / math.sqrt(1 - get_beta(k)) +\n",
+    "            math.sqrt(get_beta(k)) * torch.Tensor(np.random.normal(size=(3, 32, 32)))   \n",
+    "        ).cpu())\n",
+    "\n",
+    "    show_grid(np.array([d.detach().cpu().numpy().squeeze(0) for d in denoised[::20]]))\n",
     "\n",
     "generate_image()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im1, im2, t = pairs[0]\n",
-    "\n",
-    "pred = model(torch.Tensor(im2).to(device).unsqueeze(0), torch.Tensor(t).to(device).unsqueeze(0)).squeeze()\n",
-    "pred = pred.detach().cpu().numpy()\n",
-    "\n",
-    "show_grid(np.array([im1, im2, pred]))"
    ]
   }
  ],
