--- a/model.ipynb
+++ b/model.ipynb
@@ -179,6 +179,7 @@
     "        alphas = torch.ones(steps.shape)\n",
     "        for k in range(NB_STEPS):\n",
     "            alphas = (steps > 0) * alphas * (1 - get_beta(k)) + (steps <= 0) * alphas\n",
+    "            steps -= 1\n",
     "        alphas = alphas.to(device).repeat(1, *images.shape[1:])\n",
     "\n",
     "        noisy_images = torch.sqrt(alphas) * images + torch.sqrt(1 - alphas) * err\n",
@@ -196,7 +197,7 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "        # Compute the \n",
+    "        # Compute the loss when simply predicting 0\n",
     "        with torch.no_grad():\n",
     "            loss_0 = loss_fn(torch.zeros(err.shape), err.cpu())\n",
     "\n",
