Time encoding implementation

--- a/model.ipynb
+++ b/model.ipynb
@@ -30,7 +30,7 @@
     "    print(\"Not running on Google Colab\")\n",
     "\n",
     "from images import show_grid\n",
-    "from model import Model\n",
+    "from model import Model, PositionalEmbedding\n",
     "\n",
     "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
     "print(\"Device:\", device)"
@@ -133,6 +133,30 @@
     "show_grid(np.array(noisy[::20]))\n",
     "\n",
     "del noisy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Time encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_emb = PositionalEmbedding(NB_STEPS, 32)\n",
+    "\n",
+    "plt.figure(figsize=(8, 2.5))\n",
+    "plt.pcolormesh(pos_emb(), cmap='viridis')\n",
+    "plt.xlabel(\"Embedding dimension\")\n",
+    "plt.ylabel(\"Time\")\n",
+    "plt.title(\"Positional Encoding\")\n",
+    "plt.colorbar(label='Embedding value')\n",
+    "plt.show()"
    ]
   },
   {
