--- a/model.ipynb
+++ b/model.ipynb
@@ -148,10 +148,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos_emb = PositionalEmbedding(NB_STEPS, 32)\n",
+    "pos_emb = PositionalEmbedding(NB_STEPS, 64)()\n",
     "\n",
     "plt.figure(figsize=(8, 2.5))\n",
-    "plt.pcolormesh(pos_emb(), cmap='viridis')\n",
+    "plt.pcolormesh(pos_emb, cmap='viridis')\n",
     "plt.xlabel(\"Embedding dimension\")\n",
     "plt.ylabel(\"Time\")\n",
     "plt.title(\"Positional Encoding\")\n",
@@ -208,12 +208,10 @@
     "\n",
     "        noisy_images = torch.sqrt(alphas) * images + torch.sqrt(1 - alphas) * err\n",
     "\n",
-    "        times = steps.squeeze(1).squeeze(1).squeeze(1) / NB_STEPS\n",
-    "\n",
     "        # Train the model on them\n",
     "        optimizer.zero_grad()\n",
     "\n",
-    "        pred_err = model(noisy_images, times)\n",
+    "        pred_err = model(noisy_images, pos_emb[steps.squeeze(1).squeeze(1).squeeze(1)])\n",
     "\n",
     "        loss = loss_fn(pred_err, err)\n",
     "        loss_hist.append(loss.item())\n",
@@ -228,7 +226,7 @@
     "            # The value should progressively become negative\n",
     "            diff_loss_hist.append(loss.item() - loss_0.item())\n",
     "\n",
-    "        del images, err, steps, alphas, noisy_images, times"
+    "        del images, err, steps, alphas, noisy_images"
    ]
   },
   {
@@ -277,9 +275,8 @@
     "    denoised = [torch.Tensor([noisy])]\n",
     "\n",
     "    for k in tqdm(range(NB_STEPS-1, -1, -1)):\n",
-    "        t = k / NB_STEPS\n",
     "        im = denoised[-1]\n",
-    "        pred = model_cpu(im, torch.Tensor([t]))\n",
+    "        pred = model_cpu(im, pos_emb[k:k+1, :])\n",
     "\n",
     "        alpha = 1\n",
     "        for i in range(k+1):\n",
