--- a/model.ipynb
+++ b/model.ipynb
@@ -26,8 +26,12 @@
     "\n",
     "    drive.mount('/content/gdrive/')\n",
     "    sys.path.append('/content/gdrive/MyDrive/GenAI')\n",
+    "\n",
+    "    MODELS_PATH = '/content/gdrive/MyDrive/GenAI/output'\n",
     "except:\n",
     "    print(\"Not running on Google Colab\")\n",
+    "\n",
+    "    MODELS_PATH = 'output/'\n",
     "\n",
     "from images import show_grid\n",
     "from model import Model, PositionalEmbedding\n",
@@ -226,7 +230,10 @@
     "            # The value should progressively become negative\n",
     "            diff_loss_hist.append(loss.item() - loss_0.item())\n",
     "\n",
-    "        del images, err, steps, alphas, noisy_images"
+    "        del images, err, steps, alphas, noisy_images\n",
+    "\n",
+    "    if epoch % 100 == 0:\n",
+    "        torch.save(model.state_dict(), MODELS_PATH + str(epoch // 100).zfill(5))"
    ]
   },
   {
