--- a/model.ipynb
+++ b/model.ipynb
@@ -27,7 +27,7 @@
     "    drive.mount('/content/gdrive/')\n",
     "    sys.path.append('/content/gdrive/MyDrive/GenAI')\n",
     "\n",
-    "    MODELS_PATH = '/content/gdrive/MyDrive/GenAI/output'\n",
+    "    MODELS_PATH = '/content/gdrive/MyDrive/GenAI/output/'\n",
     "except:\n",
     "    print(\"Not running on Google Colab\")\n",
     "\n",
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos_emb = PositionalEmbedding(NB_STEPS, 64)()\n",
+    "pos_emb = PositionalEmbedding(NB_STEPS, 64)().to(device)\n",
     "\n",
     "plt.figure(figsize=(8, 2.5))\n",
     "plt.pcolormesh(pos_emb, cmap='viridis')\n",
@@ -200,7 +200,7 @@
     "        # Generate noisy images\n",
     "        err = torch.normal(mean=torch.zeros(images.shape), std=torch.ones(images.shape)).to(device)\n",
     "\n",
-    "        steps = torch.randint(0, NB_STEPS, size=(len(images), 1, 1, 1)).to(device)\n",
+    "        steps = torch.randint(0, NB_STEPS, size=(len(images), 1, 1, 1))\n",
     "\n",
     "        alphas = torch.ones(steps.shape)\n",
     "        for k in range(NB_STEPS):\n",
