Delete useless metric

--- a/model.ipynb
+++ b/model.ipynb
@@ -190,7 +190,7 @@
    "source": [
     "model.train()\n",
     "\n",
-    "loss_hist, diff_loss_hist = [], []\n",
+    "loss_hist = []\n",
     "\n",
     "for epoch in tqdm(range(NB_EPOCHS)):\n",
     "    \n",
@@ -221,28 +221,10 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "        # Compute the loss when simply predicting 0\n",
-    "        with torch.no_grad():\n",
-    "            loss_0 = loss_fn(torch.zeros(err.shape), err.cpu())\n",
-    "\n",
-    "            # The value should progressively become negative\n",
-    "            diff_loss_hist.append(loss.item() - loss_0.item())\n",
-    "\n",
     "        del images, err, steps, alphas, noisy_images\n",
     "\n",
     "    if epoch % 100 == 0:\n",
     "        torch.save(model.state_dict(), MODELS_PATH + str(epoch // 100).zfill(5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.plot(diff_loss_hist)\n",
-    "plt.show()"
    ]
   },
   {
