--- a/model.ipynb
+++ b/model.ipynb
@@ -28,10 +28,12 @@
     "    sys.path.append('/content/gdrive/MyDrive/GenAI')\n",
     "\n",
     "    MODELS_PATH = '/content/gdrive/MyDrive/GenAI/output/'\n",
+    "    hasGPU = True\n",
     "except:\n",
     "    print(\"Not running on Google Colab\")\n",
     "\n",
     "    MODELS_PATH = 'output/'\n",
+    "    hasGPU = False\n",
     "\n",
     "from images import show_grid\n",
     "from model import Model, PositionalEmbedding\n",
@@ -72,6 +74,10 @@
    "source": [
     "# Extract a category of images\n",
     "real_images = cifar10.data[ [i for i, t in enumerate(cifar10.targets) if t == cifar10.classes.index('automobile')] ] / (255 / 2) - 1\n",
+    "\n",
+    "# Allow testing without GPU\n",
+    "if not hasGPU:\n",
+    "    real_images = real_images[:2]\n",
     "\n",
     "# Use floats\n",
     "real_images = np.array(real_images, dtype=np.float32)\n",
@@ -177,6 +183,7 @@
     "model = Model().to(device)\n",
     "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
+    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, 'min', factor=0.5, patience=50, min_lr=1e-6)\n",
     "loss_fn = nn.MSELoss()\n",
     "\n",
     "data_loader = torch.utils.data.DataLoader(real_images, batch_size=BATCH_SIZE, shuffle=True)"
@@ -192,8 +199,12 @@
     "\n",
     "loss_hist = []\n",
     "\n",
-    "for epoch in tqdm(range(NB_EPOCHS)):\n",
+    "for epoch in (pbar := tqdm(range(NB_EPOCHS))):\n",
+    "    lr = optimizer.param_groups[0]['lr']\n",
+    "    pbar.set_description(f\"lr = {lr}\")\n",
     "    \n",
+    "    sum_loss = 0\n",
+    "\n",
     "    for batch, images in enumerate(data_loader):\n",
     "        images = images.to(device)\n",
     "\n",
@@ -216,15 +227,19 @@
     "        pred_err = model(noisy_images, pos_emb[steps.squeeze(1).squeeze(1).squeeze(1)])\n",
     "\n",
     "        loss = loss_fn(pred_err, err)\n",
-    "        loss_hist.append(loss.item())\n",
+    "        sum_loss += loss.item()\n",
     "\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
     "        del images, err, steps, alphas, noisy_images\n",
     "\n",
+    "    # Reduce the learning rate if needed\n",
+    "    scheduler.step(sum_loss)\n",
+    "    loss_hist.append(sum_loss)\n",
+    "\n",
     "    if epoch % 100 == 0:\n",
-    "        torch.save(model.state_dict(), MODELS_PATH + str(epoch // 100).zfill(5))"
+    "        torch.save(model.state_dict(), MODELS_PATH + str(epoch).zfill(5))"
    ]
   },
   {
