Save metrics to a file

--- a/model.ipynb
+++ b/model.ipynb
@@ -197,12 +197,13 @@
    "source": [
     "model.train()\n",
     "\n",
-    "loss_hist = []\n",
+    "loss_hist, lr_hist = [], []\n",
     "\n",
     "for epoch in (pbar := tqdm(range(NB_EPOCHS))):\n",
     "    lr = optimizer.param_groups[0]['lr']\n",
+    "    lr_hist.append(lr)\n",
     "    pbar.set_description(f\"lr = {lr}\")\n",
-    "    \n",
+    "\n",
     "    sum_loss = 0\n",
     "\n",
     "    for batch, images in enumerate(data_loader):\n",
@@ -239,7 +240,11 @@
     "    loss_hist.append(sum_loss)\n",
     "\n",
     "    if epoch % 100 == 0:\n",
-    "        torch.save(model.state_dict(), MODELS_PATH + str(epoch).zfill(5))"
+    "        torch.save(model.state_dict(), MODELS_PATH + str(epoch).zfill(5))\n",
+    "\n",
+    "        with open('metrics', 'w') as f:\n",
+    "            f.write(str(loss_hist) + '\\n')\n",
+    "            f.write(str(lr_hist) + '\\n')"
    ]
   },
   {
