--- a/model.ipynb
+++ b/model.ipynb
@@ -27,12 +27,12 @@
     "    drive.mount('/content/gdrive/')\n",
     "    sys.path.append('/content/gdrive/MyDrive/GenAI')\n",
     "\n",
-    "    MODELS_PATH = '/content/gdrive/MyDrive/GenAI/output/'\n",
+    "    OUTPUT_PATH = '/content/gdrive/MyDrive/GenAI/output/'\n",
     "    hasGPU = True\n",
     "except:\n",
     "    print(\"Not running on Google Colab\")\n",
     "\n",
-    "    MODELS_PATH = 'output/'\n",
+    "    OUTPUT_PATH = 'output/'\n",
     "    hasGPU = False\n",
     "\n",
     "from images import show_grid\n",
@@ -240,9 +240,9 @@
     "    loss_hist.append(sum_loss)\n",
     "\n",
     "    if epoch % 100 == 0:\n",
-    "        torch.save(model.state_dict(), MODELS_PATH + str(epoch).zfill(5))\n",
+    "        torch.save(model.state_dict(), OUTPUT_PATH + str(epoch).zfill(5))\n",
     "\n",
-    "        with open('metrics', 'w') as f:\n",
+    "        with open(OUTPUT_PATH + 'metrics', 'w') as f:\n",
     "            f.write(str(loss_hist) + '\\n')\n",
     "            f.write(str(lr_hist) + '\\n')"
    ]
