--- a/model.ipynb
+++ b/model.ipynb
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos_emb = PositionalEmbedding(NB_STEPS, 64)().to(device)\n",
+    "pos_emb = PositionalEmbedding(NB_STEPS, 64)()\n",
     "\n",
     "plt.figure(figsize=(8, 2.5))\n",
     "plt.pcolormesh(pos_emb, cmap='viridis')\n",
@@ -164,7 +164,9 @@
     "plt.ylabel(\"Time\")\n",
     "plt.title(\"Positional Encoding\")\n",
     "plt.colorbar(label='Embedding value')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "pos_emb = pos_emb.to(device)"
    ]
   },
   {
