--- a/model.ipynb
+++ b/model.ipynb
@@ -17,8 +17,11 @@
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "\n",
+    "from PIL import Image\n",
+    "\n",
     "import math\n",
     "import sys\n",
+    "import os\n",
     "\n",
     "# Mount Google Drive if executed on Google Colab\n",
     "try:\n",
@@ -27,13 +30,14 @@
     "    drive.mount('/content/gdrive/')\n",
     "    sys.path.append('/content/gdrive/MyDrive/GenAI')\n",
     "\n",
-    "    OUTPUT_PATH = '/content/gdrive/MyDrive/GenAI/output/'\n",
-    "    hasGPU = True\n",
+    "    ROOT_PATH = '/content/gdrive/MyDrive/GenAI/'\n",
+    "    OUTPUT_PATH = ROOT_PATH + 'output/'\n",
+    "    onColab = True\n",
     "except:\n",
     "    print(\"Not running on Google Colab\")\n",
     "\n",
     "    OUTPUT_PATH = 'output/'\n",
-    "    hasGPU = False\n",
+    "    onColab = False\n",
     "\n",
     "from images import show_grid\n",
     "from model import Model, PositionalEmbedding\n",
@@ -49,9 +53,18 @@
    "outputs": [],
    "source": [
     "NB_STEPS = 1000 - 1\n",
-    "NB_EPOCHS = 1000\n",
     "LEARNING_RATE = 1e-4\n",
-    "BATCH_SIZE = 512"
+    "BATCH_SIZE = 512\n",
+    "\n",
+    "DATASET = 'hands32x32' # 'cifar10', 'hands32x32', 'hands64x64', 'hands128x128'\n",
+    "\n",
+    "NB_EPOCHS = {\n",
+    "    'cifar10': 1000,\n",
+    "    'hands32x32': 500,\n",
+    "}[DATASET] + 1\n",
+    "\n",
+    "if not onColab:\n",
+    "    NB_EPOCHS = 3"
    ]
   },
   {
@@ -60,10 +73,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download the dataset\n",
-    "cifar10 = torchvision.datasets.CIFAR10(root='./data', train=True, download=True)\n",
+    "if DATASET == 'cifar10':\n",
+    "    # Download the dataset\n",
+    "    cifar10 = torchvision.datasets.CIFAR10(root='./data', train=True, download=True)\n",
     "\n",
-    "print(\"Classes:\", *cifar10.classes)"
+    "    print(\"Classes:\", *cifar10.classes)\n",
+    "\n",
+    "    # Extract a category of images\n",
+    "    real_images = cifar10.data[ [i for i, t in enumerate(cifar10.targets) if t == cifar10.classes.index('automobile')] ]\n",
+    "\n",
+    "elif DATASET in ['hands32x32', 'hands64x64', 'hands128x128']:\n",
+    "    s = int(DATASET.split('x')[1])\n",
+    "\n",
+    "    if onColab:\n",
+    "        real_images = np.load(ROOT_PATH + f'data/hands/{str(s)}x{str(s)}.npy')\n",
+    "    else:\n",
+    "        folder = f'data/hands/{str(s)}x{str(s)}/'\n",
+    "        files = os.listdir(folder)\n",
+    "\n",
+    "        real_images = np.empty((len(files), s, s, 3), dtype=np.uint8)\n",
+    "\n",
+    "        for i, f in enumerate(files):\n",
+    "            img = np.array(Image.open(os.path.join(folder, f)))\n",
+    "            real_images[i] = img\n",
+    "        \n",
+    "        np.save(f'data/hands/{str(s)}x{str(s)}.npy', real_images)\n",
+    "\n",
+    "else:\n",
+    "    print('Error: dataset does not exist')\n",
+    "\n",
+    "\n",
+    "real_images = real_images / (255 / 2) - 1"
    ]
   },
   {
@@ -72,11 +112,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract a category of images\n",
-    "real_images = cifar10.data[ [i for i, t in enumerate(cifar10.targets) if t == cifar10.classes.index('automobile')] ] / (255 / 2) - 1\n",
-    "\n",
     "# Allow testing without GPU\n",
-    "if not hasGPU:\n",
+    "if not onColab:\n",
     "    real_images = real_images[:2]\n",
     "\n",
     "# Use floats\n",
@@ -85,7 +122,7 @@
     "# Put the channel at the end\n",
     "real_images = np.swapaxes(real_images, 1, 3)\n",
     "\n",
-    "show_grid(real_images[:25])"
+    "show_grid(real_images[:30])"
    ]
   },
   {
@@ -182,13 +219,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Model().to(device)\n",
+    "model = Model(32).to(device)\n",
     "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
     "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, 'min', factor=0.5, patience=50, min_lr=1e-6)\n",
     "loss_fn = nn.MSELoss()\n",
     "\n",
     "data_loader = torch.utils.data.DataLoader(real_images, batch_size=BATCH_SIZE, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.load_state_dict(torch.load('00450', map_location=torch.device('cpu')))"
    ]
   },
   {
@@ -274,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_image():\n",
+    "def generate_image(output_file = None):\n",
     "    # Avoids memory problems. TODO: improve\n",
     "    model_cpu = model.cpu()\n",
     "    model_cpu.eval()\n",
@@ -293,12 +339,13 @@
     "\n",
     "        denoised.append((\n",
     "            (im - get_beta(k) / math.sqrt(1 - alpha) * pred) / math.sqrt(1 - get_beta(k)) +\n",
-    "            math.sqrt(get_beta(k)) * torch.Tensor(np.random.normal(size=(3, 32, 32)))   \n",
+    "            math.sqrt(get_beta(k)) * torch.Tensor(np.random.normal(size=(3, 32, 32)))\n",
     "        ).cpu())\n",
     "\n",
-    "    show_grid(np.array([d.detach().cpu().numpy().squeeze(0) for d in denoised[::20]]))\n",
+    "    show_grid(np.array([d.detach().cpu().numpy().squeeze(0) for d in denoised[::20]]), output_file)\n",
     "\n",
-    "generate_image()"
+    "for i in range(10, 50):\n",
+    "    generate_image('results/' + str(i).zfill(3))"
    ]
   }
  ],
