--- a/model.ipynb
+++ b/model.ipynb
@@ -234,15 +234,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load('00450', map_location=torch.device('cpu')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "model.train()\n",
     "\n",
     "loss_hist, lr_hist = [], []\n",
@@ -344,7 +335,7 @@
     "\n",
     "    show_grid(np.array([d.detach().cpu().numpy().squeeze(0) for d in denoised[::20]]), output_file)\n",
     "\n",
-    "for i in range(10, 50):\n",
+    "for i in range(10):\n",
     "    generate_image('results/' + str(i).zfill(3))"
    ]
   }
