--- a/model.ipynb
+++ b/model.ipynb
@@ -312,28 +312,25 @@
    "outputs": [],
    "source": [
     "def generate_image(output_file = None):\n",
-    "    # Avoids memory problems. TODO: improve\n",
-    "    model_cpu = model.cpu()\n",
-    "    model_cpu.eval()\n",
+    "    model.eval()\n",
     "\n",
-    "    noisy = np.random.normal(size=(3, 32, 32))\n",
+    "    img = torch.Tensor([np.random.normal(size=(3, 32, 32))], device=device)\n",
     "\n",
-    "    denoised = [torch.Tensor([noisy])]\n",
+    "    hist = [img.cpu()] # The tensors are on the CPU\n",
     "\n",
     "    for k in tqdm(range(NB_STEPS-1, -1, -1)):\n",
-    "        im = denoised[-1]\n",
-    "        pred = model_cpu(im, pos_emb[k:k+1, :])\n",
+    "        pred = model(img, pos_emb[k:k+1, :])\n",
     "\n",
     "        alpha = 1\n",
     "        for i in range(k+1):\n",
     "            alpha *= (1 - get_beta(i))\n",
     "\n",
-    "        denoised.append((\n",
-    "            (im - get_beta(k) / math.sqrt(1 - alpha) * pred) / math.sqrt(1 - get_beta(k)) +\n",
+    "        img = (img - get_beta(k) / math.sqrt(1 - alpha) * pred) / math.sqrt(1 - get_beta(k)) + \\\n",
     "            math.sqrt(get_beta(k)) * torch.Tensor(np.random.normal(size=(3, 32, 32)))\n",
-    "        ).cpu())\n",
     "\n",
-    "    show_grid(np.array([d.detach().cpu().numpy().squeeze(0) for d in denoised[::20]]), output_file)\n",
+    "        hist.append(img.detach().cpu())\n",
+    "\n",
+    "    show_grid(np.array([img.numpy().squeeze(0) for img in hist[::20]]), output_file)\n",
     "\n",
     "for i in range(10):\n",
     "    generate_image('results/' + str(i).zfill(3))"
