--- a/model.ipynb
+++ b/model.ipynb
@@ -102,7 +102,6 @@
     "else:\n",
     "    print('Error: dataset does not exist')\n",
     "\n",
-    "\n",
     "real_images = real_images / (255 / 2) - 1"
    ]
   },
@@ -115,6 +114,23 @@
     "# Allow testing without GPU\n",
     "if not onColab:\n",
     "    real_images = real_images[:2]\n",
+    "\n",
+    "# Data augmentation: rotate and flip the images\n",
+    "rotated = []\n",
+    "for img in real_images:\n",
+    "    rotated.append(img)\n",
+    "    rotated.append(np.rot90(img, 1, (0, 1)))\n",
+    "    rotated.append(np.rot90(img, 2, (0, 1)))\n",
+    "    rotated.append(np.rot90(img, 3, (0, 1)))\n",
+    "\n",
+    "    img = np.fliplr(img)\n",
+    "\n",
+    "    rotated.append(img)\n",
+    "    rotated.append(np.rot90(img, 1, (0, 1)))\n",
+    "    rotated.append(np.rot90(img, 2, (0, 1)))\n",
+    "    rotated.append(np.rot90(img, 3, (0, 1)))\n",
+    "\n",
+    "real_images = rotated\n",
     "\n",
     "# Use floats\n",
     "real_images = np.array(real_images, dtype=np.float32)\n",
