Add constant to save every x epochs

--- a/model.ipynb
+++ b/model.ipynb
@@ -60,8 +60,10 @@
     "\n",
     "NB_EPOCHS = {\n",
     "    'cifar10': 1000,\n",
-    "    'hands32x32': 500,\n",
-    "}[DATASET] + 1\n",
+    "    'hands32x32': 50,\n",
+    "}[DATASET]\n",
+    "\n",
+    "SAVE_EVERY = 10\n",
     "\n",
     "if not onColab:\n",
     "    NB_EPOCHS = 3"
@@ -294,7 +296,7 @@
     "    scheduler.step(sum_loss)\n",
     "    loss_hist.append(sum_loss)\n",
     "\n",
-    "    if epoch % 100 == 0:\n",
+    "    if epoch % SAVE_EVERY == SAVE_EVERY - 1:\n",
     "        torch.save(model.state_dict(), OUTPUT_PATH + str(epoch).zfill(5))\n",
     "\n",
     "        with open(OUTPUT_PATH + 'metrics', 'w') as f:\n",
