Choose output path

--- a/model.ipynb
+++ b/model.ipynb
@@ -31,12 +31,9 @@
     "    sys.path.append('/content/gdrive/MyDrive/GenAI')\n",
     "\n",
     "    ROOT_PATH = '/content/gdrive/MyDrive/GenAI/'\n",
-    "    OUTPUT_PATH = ROOT_PATH + 'output/'\n",
     "    onColab = True\n",
     "except:\n",
     "    print(\"Not running on Google Colab\")\n",
-    "\n",
-    "    OUTPUT_PATH = 'output/'\n",
     "    onColab = False\n",
     "\n",
     "from images import show_grid\n",
@@ -64,9 +61,24 @@
     "}[DATASET]\n",
     "\n",
     "SAVE_EVERY = 10\n",
+    "EXPERIMENT_NAME = 'hands32x32'\n",
     "\n",
     "if not onColab:\n",
     "    NB_EPOCHS = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the output folder\n",
+    "if onColab:\n",
+    "    OUTPUT_PATH = ROOT_PATH + f'output/{EXPERIMENT_NAME}/'\n",
+    "else:\n",
+    "    OUTPUT_PATH = f'output/{EXPERIMENT_NAME}/'\n",
+    "os.system(f'mkdir -p {OUTPUT_PATH}')"
    ]
   },
   {
