--- a/model.ipynb
+++ b/model.ipynb
@@ -346,10 +346,11 @@
     "\n",
     "    img = torch.Tensor([np.random.normal(size=(3, 32, 32))], device=device)\n",
     "\n",
-    "    hist = [img.cpu()] # The tensors are on the CPU\n",
+    "    hist = [] # The tensors are on the CPU\n",
     "\n",
     "    for k in tqdm(range(NB_STEPS-1, -1, -1)):\n",
-    "        pred = model(img, pos_emb[k:k+1, :])\n",
+    "        with torch.no_grad():\n",
+    "            pred = model(img, pos_emb[k:k+1, :])\n",
     "\n",
     "        alpha = 1\n",
     "        for i in range(k+1):\n",
@@ -358,9 +359,10 @@
     "        img = (img - get_beta(k) / math.sqrt(1 - alpha) * pred) / math.sqrt(1 - get_beta(k)) + \\\n",
     "            math.sqrt(get_beta(k)) * torch.Tensor(np.random.normal(size=(3, 32, 32)))\n",
     "\n",
-    "        hist.append(img.detach().cpu())\n",
+    "        if k % ((NB_STEPS+1) // 40) == 0:\n",
+    "            hist.append(img.detach().cpu())\n",
     "\n",
-    "    show_grid(np.array([img.numpy().squeeze(0) for img in hist[::20]]), output_file)\n",
+    "    show_grid(np.array([img.numpy().squeeze(0) for img in hist]), output_file)\n",
     "\n",
     "for i in range(10):\n",
     "    generate_image('results/' + str(i).zfill(3))"
