--- a/model.ipynb
+++ b/model.ipynb
@@ -249,13 +249,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "torch.backends.cudnn.benchmark = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model = Model(32).to(device)\n",
     "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
     "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, 'min', factor=0.5, patience=50, min_lr=1e-6)\n",
     "loss_fn = nn.MSELoss()\n",
     "\n",
-    "data_loader = torch.utils.data.DataLoader(real_images, batch_size=BATCH_SIZE, shuffle=True)"
+    "# pin_memory improves performance on GPU\n",
+    "data_loader = torch.utils.data.DataLoader(real_images, batch_size=BATCH_SIZE, shuffle=True, pin_memory=True)"
    ]
   },
   {
@@ -292,7 +302,7 @@
     "        noisy_images = torch.sqrt(alphas) * images + torch.sqrt(1 - alphas) * err\n",
     "\n",
     "        # Train the model on them\n",
-    "        optimizer.zero_grad()\n",
+    "        optimizer.zero_grad(set_to_none=True)\n",
     "\n",
     "        pred_err = model(noisy_images, pos_emb[steps.squeeze(1).squeeze(1).squeeze(1)])\n",
     "\n",
@@ -344,7 +354,7 @@
     "def generate_image(output_file = None):\n",
     "    model.eval()\n",
     "\n",
-    "    img = torch.Tensor([np.random.normal(size=(3, 32, 32))], device=device)\n",
+    "    img = torch.normal(mean=torch.zeros(1, 3, 32, 32), std=torch.ones(1, 3, 32, 32)).to(device)\n",
     "\n",
     "    hist = [] # The tensors are on the CPU\n",
     "\n",
@@ -355,9 +365,11 @@
     "        alpha = 1\n",
     "        for i in range(k+1):\n",
     "            alpha *= (1 - get_beta(i))\n",
+    "        \n",
+    "        noise = torch.normal(mean=torch.zeros(1, 3, 32, 32), std=torch.ones(1, 3, 32, 32)).to(device)\n",
     "\n",
     "        img = (img - get_beta(k) / math.sqrt(1 - alpha) * pred) / math.sqrt(1 - get_beta(k)) + \\\n",
-    "            math.sqrt(get_beta(k)) * torch.Tensor(np.random.normal(size=(3, 32, 32)))\n",
+    "            math.sqrt(get_beta(k)) * noise\n",
     "\n",
     "        if k % ((NB_STEPS+1) // 40) == 0:\n",
     "            hist.append(img.detach().cpu())\n",
