--- a/model.ipynb
+++ b/model.ipynb
@@ -277,6 +277,7 @@
     "model.train()\n",
     "\n",
     "loss_hist, lr_hist = [], []\n",
+    "scaler = torch.cuda.amp.GradScaler()\n",
     "\n",
     "for epoch in (pbar := tqdm(range(NB_EPOCHS))):\n",
     "    lr = optimizer.param_groups[0]['lr']\n",
@@ -304,13 +305,14 @@
     "        # Train the model on them\n",
     "        optimizer.zero_grad(set_to_none=True)\n",
     "\n",
-    "        pred_err = model(noisy_images, pos_emb[steps.squeeze(1).squeeze(1).squeeze(1)])\n",
+    "        with torch.autocast(device_type='cuda', dtype=torch.float16):\n",
+    "            pred_err = model(noisy_images, pos_emb[steps.squeeze(1).squeeze(1).squeeze(1)])\n",
+    "            loss = loss_fn(pred_err, err)\n",
+    "            sum_loss += loss.item()\n",
     "\n",
-    "        loss = loss_fn(pred_err, err)\n",
-    "        sum_loss += loss.item()\n",
-    "\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
+    "        scaler.scale(loss).backward()\n",
+    "        scaler.step(optimizer)\n",
+    "        scaler.update()\n",
     "\n",
     "        del images, err, steps, alphas, noisy_images\n",
     "\n",
@@ -343,6 +345,15 @@
    "metadata": {},
    "source": [
     "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model.load_state_dict(torch.load(\"00079\", map_location=torch.device('cpu')))"
    ]
   },
   {
